--- a/docs/_posts/2000-01-01-intro.md
+++ b/docs/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: black
 style: center
 ---
 
-### [*NewSong.Top*]({{site.source_link}})
+### [*appemit.com*]({{site.source_link}})
 {: .text-purple}
 
 <span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
@@ -13,10 +13,10 @@ style: center
   <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
 </span>
 
-# New Song.Top
+# AppEmit
 
--NewSong.Top for you,new song, hot song,audiovisual appreciation.
+-AppEmit.com  
  
--new song, hot song, punjabi song,new song 2020,santali video,wapking,new song 2019
+ AppEmit 嵌入APP,支持播放flash的flv swf 以及视频播放，可以嵌入各类程序
 
  
