--- a/docs/_posts/2000-01-06-contact.md
+++ b/docs/_posts/2000-01-06-contact.md
@@ -11,5 +11,5 @@ fa-icon: film
 {: .left}
 {% highlight text linenos=table %}
  
-Email appemit@appemit.com
+Email {{ site.email }}
 {% endhighlight %}
