--- a/docs/_posts/2000-01-01-intro.md
+++ b/docs/_posts/2000-01-01-intro.md
@@ -13,10 +13,85 @@ style: center
   <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
 </span>
 
-# AppEmit
+# 1	AppEmit
+AppEmit是应用程序（尤其是浏览器）与本地程序间互相通信的易扩展的轻量级中间件。主要采用了HTML5国际标准的Web Socket进行通话，默认为异步， JSON格式传递参数。主要实现功能：
+	
+	在浏览器播放Flash，包括swf交互动画、flv影视等
 
--AppEmit.com  
- 
- AppEmit 嵌入APP,支持播放flash的flv swf 以及视频播放，可以嵌入各类程序
+	在浏览器打开、操作本地文件，比如办公软件
 
+	开发本地硬件DLL驱动模块的封装插件，实现在网页中操作控制本地的读卡器、打印机、扫描仪、高拍仪、U盾等各种硬件设备
+
+	各个应用程序之间 通信 
+
+程序名称	AppEmit.exe
+
+网址	[http://www.appemit.com](http://www.appemit.com)
+
+Github[https://github.com/appemit/appemit](https://github.com/appemit/appemit)
+
+Email	appemit(at)appemit.com	
+
+## 1.1	使用条件
+
+Windows系统，支持XP以上。
+
+## 1.2	用法
+
+下载免安装程序AppEmit（不含插件小于6M），运行AppEmit.exe即可。设置了开机自启动，应避免被杀毒软件关闭。
+
+![目录](https://github.com/appemit/appemit/blob/master/docs/img/1.2.png)
+
+ 同时只能开启一个AppEmit.exe进程。
  
+	直接运行，如果本机已经运行了AppEmit.exe，则不做处理。
+
+	如果本机已经有程序AppEmit.exe运行，右键以管理员方式运行，则关闭老进程，开启新的进程。
+
+## 1.3	技术实现
+
+Web Socket采用开源控件[HPSocket](https://github.com/ldcsaa/HP-Socket)，支持ssl。
+
+Dll文件开放了C接口，可以在此基础二次开发控件。
+
+	HPSocket4C_U.dll
+
+	HPSocket4C-SSL_U.dll
+
+### 1.3.1	实现过程
+
+在Html的js实现WebSocket，调用AppEmit通话。
+```
+ws = new WebSocket(wsUrl);  
+ws.onopen = function (evt) {};
+ws.onmessage = function (evt) {};
+ws.onclose = function (evt) {};
+```
+### 1.3.2	主要步骤，连接授权，发送命令
+
+1.	网页注册后获得设置cid，clientKey，获得连接授权。或者使用临时账户cid=10000-0测试。
+2.	连接Appemit服务
+initAppEmit("ws://localhost:80/appemit?cid=10000-0&sid=1&flag=1")
+3.	设置clientKey授权，(clientKey为私有，发布后需要保密混淆加密js)初始化数据以及授权等
+```
+var init_AE={
+		 "clientKey":"temp-0000000000",  
+		  "Browser":ThisBrowser,
+		  "wsUrl":wsUrl,
+		//  "sid":"1",         
+		  "gid":"[1,2]",      
+  }
+
+  EmitReq_PaOP(init_AE);
+  ```
+4.	发送命令
+
+`startAppEmit('{"emit":"hardWare","Obj":"pc"}') `
+
+### 1.3.3	demo
+在demo下主要是html的举例，
+	包括获取pc信息，实现通话的index.html
+	以及播放flash的AppEmbed.html
+
+## 1.4	联系
+邮件： appemit@appemit.com
