--- a/docs/_posts/2000-01-01-intro.md
+++ b/docs/_posts/2000-01-01-intro.md
@@ -13,7 +13,8 @@ style: center
   <i class="fa fa-bicycle fa-stack-1x text-orange"></i>
 </span>
 
-# 1	AppEmit
+#  AppEmit
+
 AppEmit是应用程序（尤其是浏览器）与本地程序间互相通信的易扩展的轻量级中间件。主要采用了HTML5国际标准的Web Socket进行通话，默认为异步， JSON格式传递参数。主要实现功能：
 	
 	在浏览器播放Flash，包括swf交互动画、flv影视等
