--- a/docs/_posts/2000-01-06-contact.md
+++ b/docs/_posts/2000-01-06-contact.md
@@ -10,6 +10,6 @@ fa-icon: film
 ### Contact
 {: .left}
 {% highlight text linenos=table %}
- 
-Email {{ site.email }}
+ Email {{ site.email }}
+ github {{ site.github }}
 {% endhighlight %}
