--- a/docs/_posts/2000-01-01-intro.md
+++ b/docs/_posts/2000-01-01-intro.md
@@ -59,7 +59,7 @@ Dll文件开放了C接口，可以在此基础二次开发控件。
 
 	HPSocket4C-SSL_U.dll
 
-### 1.3.1	实现过程
+1.3.1	实现过程
 
 在Html的js实现WebSocket，调用AppEmit通话。
 ```
@@ -68,7 +68,7 @@ ws.onopen = function (evt) {};
 ws.onmessage = function (evt) {};
 ws.onclose = function (evt) {};
 ```
-### 1.3.2	主要步骤，连接授权，发送命令
+1.3.2	主要步骤，连接授权，发送命令
 
 1.	网页注册后获得设置cid，clientKey，获得连接授权。或者使用临时账户cid=10000-0测试。
 2.	连接Appemit服务
@@ -89,7 +89,7 @@ var init_AE={
 
 `startAppEmit('{"emit":"hardWare","Obj":"pc"}') `
 
-### 1.3.3	demo
+1.3.3	demo
 在demo下主要是html的举例，
 	包括获取pc信息，实现通话的index.html
 	以及播放flash的AppEmbed.html
