--- a/docs/_posts/2000-01-03-code.md
+++ b/docs/_posts/2000-01-03-code.md
@@ -8,7 +8,7 @@ fa-icon: toggle-on
  
 #  参数
 
-## 3.1	连接
+ 3.1	连接
 
 ws://localhost:80/appemit?cid=10000-0&sid=1&flag=1
 
@@ -24,7 +24,7 @@ para	cid	必需。10000-0为免费账号。	全集。
 	flag	可选。默认0，非调试。
 1调试	
 
-## 3.2	初始化数据
+ 3.2	初始化数据
 ```
 var init_AE={
  		"clientKey":"temp-0000000000",  
@@ -41,16 +41,16 @@ wsUrl	wsUrl	默认	可以在config.in修改
 用户sid		非必需。唯一才可以正常通话。	生产环境，同一设置于此。
 群gid	数组	非必需	一个sid可有不同gid
 
-## 3.3	命令
+3.3	命令
 
-### 3.3.1	硬件信息
+ 3.3.1	硬件信息
 
 `{"emit":"hardWare","Obj":"pc"}`
 名称	设置	含义	说明
 emit	hardWare	必需。通信请求。	
 Obj	pc	必需。目标对象。	
 
-### 3.3.2	通话
+ 3.3.2	通话
 
 `{"emit":"msg","toSids":["2"],"toGids":[1,2],"data":"hi, I'am Tom."}`
 名称	设置	含义	说明
@@ -59,7 +59,7 @@ toSids	必需要有一个	非必需。可以是数组。
 toGids		非必需。可以是数组。	
 data		必需。	
 
-### 3.3.3	打开事件
+ 3.3.3	打开事件
 
 参数格式如下
 名称	设置	含义	说明
@@ -71,7 +71,7 @@ excel后续支持
 CAD后续支持	
 par0			
 
-#### 3.3.3.1	"AppType":0打开flash
+ 3.3.3.1	"AppType":0打开flash
 ```
 {"emit":"open","Obj":"flash","AppType":0,"src":"http://img1.yo4399.com/swf/00/0ff035e0e96584c07df65ab3636f72.swf","pos":1,"par0":{"autoPlay":1,"toolbar":0,"rightMenu":0,"hitCaption":0,"hideStop":0,"loop":1,"volumeMute":0,"flashVars":"a=0&b=0&c=SetInSrc"}}
 ```
@@ -116,7 +116,7 @@ pos	{"left":372,"top":203,"width":606,"height":406}	必需。
 1 默认使用代码自动识别的位置。	对不同的浏览器，自动识别的位置需要优化
 
 
-#### 3.3.3.2	"AppType":1打开flash
+3.3.3.2	"AppType":1打开flash
 ```
 {"emit":"open","Obj":"flash","AppType":1,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp14/yzg/20140328/bombit7/zx_game7.htm","pos":1}
 ```
@@ -133,7 +133,7 @@ src		必需。
 pos	{"left":372,"top":203,"width":606,"height":406}	必需。
 1 默认使用代码自动识别的位置。	对不同的浏览器，自动识别的位置需要优化
 
-#### 3.3.3.3	"AppType":2打开flash
+3.3.3.3	"AppType":2打开flash
 ```
 {"emit":"open","Obj":"flash","AppType":2,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp18/liuxy/20160130/17801/game.swf","pos":1,"par0":{"autoPlay":true,"loop":true,"quality":"high","wmode":"Transparent"}}
 ```
@@ -154,7 +154,7 @@ par0	autoPlay	可选。默认true	参考flash官方默认参数。
 	quality	可选。默认high	参考flash官方默认参数。
 	wmode	可选。默认Transparent	参考flash官方默认参数。
 
-#### 3.3.3.4	"AppType":3打开flash
+3.3.3.4	"AppType":3打开flash
 ```
 {"emit":"open","Obj":"flash","AppType":3,"src":"https://media.html5media.info/video.mp4","pos":1,"par0":{"autoPlay":1,"loop":1}}
 ```
@@ -174,9 +174,9 @@ par0	autoPlay	可选。默认1	参考
 https://player.alicdn.com/aliplayer/setting/setting.html
 	loop	可选。默认1	
 	
-### 3.3.4	关闭
+3.3.4	关闭
 
-#### 3.3.4.1	关闭sid对应APP
+ 3.3.4.1	关闭sid对应APP
 
 `{"emit":"close","Obj":"flash"}`
 
@@ -184,7 +184,7 @@ https://player.alicdn.com/aliplayer/setting/setting.html
 emit	close	必需。关闭控件APP通信事件请求。	
 Obj	flash	必需。	
 
-#### 3.3.4.2	关闭cid所有APP
+ 3.3.4.2	关闭cid所有APP
 
 `{"emit":"closeAll","Obj":"flash"}`
 
