--- a/docs/_posts/2000-01-03-code.md
+++ b/docs/_posts/2000-01-03-code.md
@@ -72,9 +72,8 @@ CAD后续支持
 par0			
 
  3.3.3.1	"AppType":0打开flash
-```
-{"emit":"open","Obj":"flash","AppType":0,"src":"http://img1.yo4399.com/swf/00/0ff035e0e96584c07df65ab3636f72.swf","pos":1,"par0":{"autoPlay":1,"toolbar":0,"rightMenu":0,"hitCaption":0,"hideStop":0,"loop":1,"volumeMute":0,"flashVars":"a=0&b=0&c=SetInSrc"}}
-```
+
+`{"emit":"open","Obj":"flash","AppType":0,"src":"http://img1.yo4399.com/swf/00/0ff035e0e96584c07df65ab3636f72.swf","pos":1,"par0":{"autoPlay":1,"toolbar":0,"rightMenu":0,"hitCaption":0,"hideStop":0,"loop":1,"volumeMute":0,"flashVars":"a=0&b=0&c=SetInSrc"}}`
 名称	设置	含义	说明
 emit	open	必需。打开控件APP通信事件请求。	
 Obj	flash	必需。
@@ -117,9 +116,9 @@ pos	{"left":372,"top":203,"width":606,"height":406}	必需。
 
 
 3.3.3.2	"AppType":1打开flash
-```
-{"emit":"open","Obj":"flash","AppType":1,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp14/yzg/20140328/bombit7/zx_game7.htm","pos":1}
-```
+
+`{"emit":"open","Obj":"flash","AppType":1,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp14/yzg/20140328/bombit7/zx_game7.htm","pos":1}`
+
 名称	设置	含义	说明
 emit	open	必需。打开控件APP通信事件请求。	
 Obj	flash	必需。	
@@ -134,9 +133,9 @@ pos	{"left":372,"top":203,"width":606,"height":406}	必需。
 1 默认使用代码自动识别的位置。	对不同的浏览器，自动识别的位置需要优化
 
 3.3.3.3	"AppType":2打开flash
-```
-{"emit":"open","Obj":"flash","AppType":2,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp18/liuxy/20160130/17801/game.swf","pos":1,"par0":{"autoPlay":true,"loop":true,"quality":"high","wmode":"Transparent"}}
-```
+
+`{"emit":"open","Obj":"flash","AppType":2,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp18/liuxy/20160130/17801/game.swf","pos":1,"par0":{"autoPlay":true,"loop":true,"quality":"high","wmode":"Transparent"}}`
+ 
 名称	设置	含义	说明
 emit	open	必需。打开控件APP通信事件请求。	
 Obj	flash	必需。	
@@ -155,9 +154,9 @@ par0	autoPlay	可选。默认true	参考flash官方默认参数。
 	wmode	可选。默认Transparent	参考flash官方默认参数。
 
 3.3.3.4	"AppType":3打开flash
-```
-{"emit":"open","Obj":"flash","AppType":3,"src":"https://media.html5media.info/video.mp4","pos":1,"par0":{"autoPlay":1,"loop":1}}
-```
+
+`{"emit":"open","Obj":"flash","AppType":3,"src":"https://media.html5media.info/video.mp4","pos":1,"par0":{"autoPlay":1,"loop":1}}`
+
 名称	设置	含义	说明
 emit	open	必需。打开控件APP通信事件请求。	
 Obj	flash	必需。	
