--- a/docs/_posts/2000-01-02-plugin.md
+++ b/docs/_posts/2000-01-02-plugin.md
@@ -8,7 +8,7 @@ fa-icon: check-square-o
 
 #  插件场景
 
-## 2.1	获取客户端信息
+ 2.1	获取客户端信息
 
 使用浏览器打开demo下的index.html。授权连接后，发送获取PC信息命令。
 
@@ -16,13 +16,16 @@ fa-icon: check-square-o
 initAppEmit("ws://localhost:80/appemit?cid=10000-0&sid=1&flag=1")
 startAppEmit('{"emit":"hardWare","Obj":"pc"}') 
 ```
+
 ![PC信息](https://github.com/appemit/appemit/blob/master/docs/img/2.1.png)
 
 2.2	不同客户端通信
 
 打开demo下的index.html,模拟不同sid打开浏览器。
 连接Appemit授权后，在sid=1下发送命令。
+
 `{"emit":"msg","toSids":["2,3"],"toGids":[1,2],"data":"hi, I'am Tom."}`
+
 在客户cid全集下，通过唯一的sid对话，可以一对一，或者一对多通话。
  ![1对2和3通话](https://github.com/appemit/appemit/blob/master/docs/img/2.2.png)
 图为1对2和3通话。
@@ -35,62 +38,73 @@ startAppEmit('{"emit":"hardWare","Obj":"pc"}')
 
 1、	使用客户端本地安装的Flash Player ActiveX控件，要是客户端没有，需要自行下载。下载地址：http://www.adobe.com/go/getflashplayer
 2、	使用Appemit程序自带的插件plugins/NPSWF32.dll
- ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.1.png)
-### 2.3.1	ActiveX形式
 
-#### 2.3.1.1	打开网络flash文件
+ ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.1.png)
+ 
+2.3.1	ActiveX形式
+
+2.3.1.1	打开网络flash文件
+
 打开demo下的AppEmbed.html,连接授权后，发送使用ActiveX（"AppType":0）打开网络flash文件命令，参数如下。
-```
-{"emit":"open","Obj":"flash","AppType":0,"src":"http://img1.yo4399.com/swf/00/0ff035e0e96584c07df65ab3636f72.swf","pos":1,"par0":{"autoPlay":1,"toolbar":0,"rightMenu":0,"hitCaption":0,"hideStop":0,"loop":1,"volumeMute":0,"flashVars":"a=0&b=0&c=SetInSrc"}}
-```
+
+`{"emit":"open","Obj":"flash","AppType":0,"src":"http://img1.yo4399.com/swf/00/0ff035e0e96584c07df65ab3636f72.swf","pos":1,"par0":{"autoPlay":1,"toolbar":0,"rightMenu":0,"hitCaption":0,"hideStop":0,"loop":1,"volumeMute":0,"flashVars":"a=0&b=0&c=SetInSrc"}}`
+
+
 注意事项：
 
 在客户端需要下载安装flash player ActiveX。
 路径是 / 或许 \\
 flashVars可以设置在src中
+
  ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.1.1.png)
  
 刷新即可关闭flash
 
-#### 2.3.1.2	打开本地flash文件
+
+2.3.1.2	打开本地flash文件
 
 可以是绝对或者相对路径，相对于AppEmit.exe的路径："demo/htmlDemo/test1.swf"。
-```
-{"emit":"open","Obj":"flash","AppType":0,"src":"demo/htmlDemo/test1.swf","pos":1,"par0":{"autoPlay":1,"toolbar":0,"rightMenu":0,"hitCaption":0,"hideStop":0,"loop":1,"volumeMute":0,"flashVars":"a=0&b=0&c=SetInSrc"}}
- ```
+
+`{"emit":"open","Obj":"flash","AppType":0,"src":"demo/htmlDemo/test1.swf","pos":1,"par0":{"autoPlay":1,"toolbar":0,"rightMenu":0,"hitCaption":0,"hideStop":0,"loop":1,"volumeMute":0,"flashVars":"a=0&b=0&c=SetInSrc"}}`
+ 
  ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.1.2.png)
-### 2.3.2	NPAPI-嵌入web
+
+2.3.2	NPAPI-嵌入web
 
 能打开常用网页，目前的插件不支持html5的媒体特性。如有需要，可以使用node或者electron插件。
 使用Appemit程序自带的插件NPSWF32.dll，能打开嵌有flash的网页。
 连接授权后，发送命令"AppType":1的形式。
-```
-{"emit":"open","Obj":"flash","AppType":1,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp14/yzg/20140328/bombit7/zx_game7.htm","pos":1}
- ```
+
+`{"emit":"open","Obj":"flash","AppType":1,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp14/yzg/20140328/bombit7/zx_game7.htm","pos":1}`
+
   ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.2.png)
-### 2.3.3	NPAPI-网络flash文件
+
+2.3.3	NPAPI-网络flash文件
 
 使用Appemit程序自带的插件NPSWF32.dll， 打开网络flash文件。
 连接授权后，发送命令"AppType":2的形式。
-```
-{"emit":"open","Obj":"flash","AppType":2,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp18/liuxy/20160130/17801/game.swf","pos":1,"par0":{"autoPlay":true,"loop":true,"quality":"high","wmode":"Transparent"}}
- ```
+
+`{"emit":"open","Obj":"flash","AppType":2,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp18/liuxy/20160130/17801/game.swf","pos":1,"par0":{"autoPlay":true,"loop":true,"quality":"high","wmode":"Transparent"}}`
+
   ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.3.png)
-### 2.3.4	NPAPI-网络媒体文件
+
+2.3.4	NPAPI-网络媒体文件
 
 使用Appemit程序自带的插件NPSWF32.dll， 打开网络媒体文件，包括flv,mp4等。
 连接授权后，发送命令"AppType":3的形式。
-```
-{"emit":"open","Obj":"flash","AppType":3,"src":"https://media.html5media.info/video.mp4","pos":1,"par0":{"autoPlay":1,"loop":1}}
-```
+
+`{"emit":"open","Obj":"flash","AppType":3,"src":"https://media.html5media.info/video.mp4","pos":1,"par0":{"autoPlay":1,"loop":1}}`
+
   ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.4.png)
-## 2.4	关闭
+
+ 2.4	关闭
 
 1.	刷新即可关闭flash
 2.	`{"emit":"close","Obj":"flash"}`
 3.	`{"emit":"closeAll","Obj":"flash"}`
 
-## 2.5	其它
+
+ 2.5	其它
 
 请关注。
  
