--- a/docs/_posts/2000-01-01-intro.md
+++ b/docs/_posts/2000-01-01-intro.md
@@ -14,13 +14,13 @@ style: center
 
 AppEmit是应用程序（尤其是浏览器）与本地程序间互相通信的易扩展的轻量级中间件。主要采用了HTML5国际标准的Web Socket进行通话，默认为异步， JSON格式传递参数。主要实现功能：
 	
-	在浏览器播放Flash，包括swf交互动画、flv影视等
+ - 在浏览器播放Flash，包括swf交互动画、flv影视等
 
-	在浏览器打开、操作本地文件，比如办公软件
+ - 在浏览器打开、操作本地文件，比如办公软件
 
-	开发本地硬件DLL驱动模块的封装插件，实现在网页中操作控制本地的读卡器、打印机、扫描仪、高拍仪、U盾等各种硬件设备
+ - 开发本地硬件DLL驱动模块的封装插件，实现在网页中操作控制本地的读卡器、打印机、扫描仪、高拍仪、U盾等各种硬件设备
 
-	各个应用程序之间 通信 
+ - 各个应用程序之间 通信 
 
 程序名称	AppEmit.exe
 
@@ -90,12 +90,14 @@ var init_AE={
 
 `startAppEmit('{"emit":"hardWare","Obj":"pc"}') `
 
-1.3.3	demo
+1.3.3 demo
 
 在demo下主要是html的举例，
-	包括获取pc信息，实现通话的index.html
-	以及播放flash的AppEmbed.html
 
- 1.4	联系
+ - 括获取pc信息，实现通话的index.html
+
+ - 以及播放flash的AppEmbed.html
+
+1.4 联系
  
 邮件： appemit@appemit.com
