--- a/docs/_posts/2000-01-01-home.md
+++ b/docs/_posts/2000-01-01-home.md
@@ -5,7 +5,7 @@ color: black
  
 ---
 
-
+[AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html) [Demo](http://www.appemit.com/demo/index.html)
  
 
 #  AppEmit
