--- a/docs/_posts/2000-01-04-plugin.md
+++ b/docs/_posts/2000-01-04-plugin.md
@@ -17,7 +17,7 @@ initAppEmit("ws://localhost:80/appemit?cid=10000-0&sid=1&flag=1")
 startAppEmit('{"emit":"hardWare","Obj":"pc"}') 
 ```
 
-![PC信息](https://github.com/appemit/appemit/blob/master/docs/img/2.1.png)
+![PC信息](https://oscimg.oschina.net/oscnet/up-44b62908fc48fae5d45331fa24c6f01153b.png)
 
 2.2	不同客户端通信
 
@@ -27,7 +27,7 @@ startAppEmit('{"emit":"hardWare","Obj":"pc"}')
 `{"emit":"msg","toSids":["2,3"],"toGids":[1,2],"data":"hi, I'am Tom."}`
 
 在客户cid全集下，通过唯一的sid对话，可以一对一，或者一对多通话。
- ![1对2和3通话](https://github.com/appemit/appemit/blob/master/docs/img/2.2.png)
+ ![1对2和3通话](https://oscimg.oschina.net/oscnet/up-5a42e11cc49490528230962d8f6877b0992.png)
 图为1对2和3通话。
 
 另外还可以设置不同群gid，一个sid可以加入不同的gid。
@@ -39,7 +39,7 @@ startAppEmit('{"emit":"hardWare","Obj":"pc"}')
 1、	使用客户端本地安装的Flash Player ActiveX控件，要是客户端没有，需要自行下载。下载地址：http://www.adobe.com/go/getflashplayer
 2、	使用Appemit程序自带的插件plugins/NPSWF32.dll
 
- ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.1.png)
+ ![image](https://oscimg.oschina.net/oscnet/up-2e8236009e81260ab859732c49face1b6f3.png)
  
 2.3.1	ActiveX形式
 
@@ -56,7 +56,7 @@ startAppEmit('{"emit":"hardWare","Obj":"pc"}')
 路径是 / 或许 \\
 flashVars可以设置在src中
 
- ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.1.1.png)
+ ![image](https://oscimg.oschina.net/oscnet/up-07a8caec3a631277a5912ba1ac1de0a6610.gif)
  
 刷新即可关闭flash
 
@@ -67,7 +67,7 @@ flashVars可以设置在src中
 
 `{"emit":"open","Obj":"flash","AppType":0,"src":"demo/htmlDemo/test1.swf","pos":1,"par0":{"autoPlay":1,"toolbar":0,"rightMenu":0,"hitCaption":0,"hideStop":0,"loop":1,"volumeMute":0,"flashVars":"a=0&b=0&c=SetInSrc"}}`
  
- ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.1.2.png)
+ ![image](https://oscimg.oschina.net/oscnet/up-f52a6e70f8c2b903cfcee8825ce83114152.png)
 
 2.3.2	NPAPI-嵌入web
 
@@ -77,7 +77,7 @@ flashVars可以设置在src中
 
 `{"emit":"open","Obj":"flash","AppType":1,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp14/yzg/20140328/bombit7/zx_game7.htm","pos":1}`
 
-  ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.2.png)
+  ![image](https://oscimg.oschina.net/oscnet/up-fecbfcf487c8ec0864c81fd882dbd225aeb.png)
 
 2.3.3	NPAPI-网络flash文件
 
@@ -86,7 +86,7 @@ flashVars可以设置在src中
 
 `{"emit":"open","Obj":"flash","AppType":2,"src":"http://sxiao.4399.com/4399swf/upload_swf/ftp18/liuxy/20160130/17801/game.swf","pos":1,"par0":{"autoPlay":true,"loop":true,"quality":"high","wmode":"Transparent"}}`
 
-  ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.3.png)
+  ![image](https://oscimg.oschina.net/oscnet/up-9e83f4a8664206c635a9b76a5523e6521b6.png)
 
 2.3.4	NPAPI-网络媒体文件
 
@@ -95,7 +95,7 @@ flashVars可以设置在src中
 
 `{"emit":"open","Obj":"flash","AppType":3,"src":"https://media.html5media.info/video.mp4","pos":1,"par0":{"autoPlay":1,"loop":1}}`
 
-  ![image](https://github.com/appemit/appemit/blob/master/docs/img/2.3.4.png)
+  ![image](https://oscimg.oschina.net/oscnet/up-80b6c923601d92387d7aab0a11487962a8a.png)
 
  2.4	关闭
 
