--- a/docs/_posts/2000-01-01-home.md
+++ b/docs/_posts/2000-01-01-home.md
@@ -5,7 +5,8 @@ color: black
  
 ---
 
-[推荐分发下载地址](https://cdn.jsdelivr.net/gh/appemit/appemit/AppEmit.zip) [AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html) [Demo](http://www.appemit.com/demo/index.html)
+[推荐内容分发下载地址](https://cdn.jsdelivr.net/gh/appemit/appemit/dist/AppEmit.zip)
+[AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html)   [Demo](http://www.appemit.com/demo/index.html)
  
 
 #  AppEmit
