--- a/docs/_posts/2000-01-01-home.md
+++ b/docs/_posts/2000-01-01-home.md
@@ -5,8 +5,10 @@ color: black
  
 ---
 
-[推荐内容分发下载地址](https://cdn.jsdelivr.net/gh/appemit/appemit/dist/AppEmit.zip)
-[AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html)   [Demo](http://www.appemit.com/demo/index.html)
+1. [推荐内容分发下载地址](https://cdn.jsdelivr.net/gh/appemit/appemit/dist/AppEmit.zip)
+   [github下载地址] https://raw.githubusercontent.com/appemit/appemit/master/dist/AppEmit.zip
+
+2. [AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html)   [Demo](http://www.appemit.com/demo/index.html)
  
 
 #  AppEmit
