--- a/docs/_posts/2000-01-07-download.md
+++ b/docs/_posts/2000-01-07-download.md
@@ -9,7 +9,7 @@ fa-icon: cloud-upload
 
 easy,samll!
 
-1. [推荐内容分发下载地址](https://cdn.jsdelivr.net/gh/appemit/appemit/dist/AppEmit.zip)
-   [github Download](https://raw.githubusercontent.com/appemit/appemit/master/dist/AppEmit.zip)
+1. [推荐内容分发*下载*地址](https://cdn.jsdelivr.net/gh/appemit/appemit/dist/AppEmit.zip)
+   [github *下载*地址](https://raw.githubusercontent.com/appemit/appemit/master/dist/AppEmit.zip)
 2. [AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html)   [Demo](http://www.appemit.com/demo/index.html)
  
