--- a/docs/_posts/2000-01-04-plugin.md
+++ b/docs/_posts/2000-01-04-plugin.md
@@ -104,7 +104,22 @@ flashVars可以设置在src中
 3.	`{"emit":"closeAll","Obj":"flash"}`
 
 
- 2.5	其它
+ 2.5	 Web
+2.4.1	IE 内核
+"AppType":1使用IE内核打开网页
+{"emit":"open","Obj":"web","AppType":1,"pos":1,"par":{"htmlStr":null,"HttpServer_startUrl":null,"URL":"http://www.appemit.com"},"par0":{"header":null,"noScriptErr":true, "UIFLAG":null,"DLCTL":null,"userAgent":null,"crossDomain":true}}
 
-请关注。
+设置htmlStr可以直接打开html源码。
+设置HttpServer_startUrl，可以打开本地的html文件。
+设置URL打开网页。 三者优先级依次下降。
+2.4.2	Webkit内核
+"AppType":2使用webkit内核打开网页
+{"emit":"open","Obj":"web","AppType":2,"pos":1,"par":{"htmlStr":null,"HttpServer_startUrl":null,"URL":"http://www.appemit.com"},"par0":{"header":null, "userAgent":null,"crossDomain":true}}
+
+设置htmlStr可以直接打开html源码。
+设置HttpServer_startUrl，可以打开本地的html文件。
+设置URL打开网页。 三者优先级依次下降。
+
+
+ 
  
