--- a/docs/_posts/2000-01-04-plugin.md
+++ b/docs/_posts/2000-01-04-plugin.md
@@ -17,7 +17,7 @@ initAppEmit("ws://localhost:80/appemit?cid=10000-0&sid=1&flag=1")
 startAppEmit('{"emit":"hardWare","Obj":"pc"}') 
 ```
 
-![PC信息](https://oscimg.oschina.net/oscnet/up-44b62908fc48fae5d45331fa24c6f01153b.png)
+![PC信息](https://cdn.jsdelivr.net/gh/appemit/appemit/docs/img/1.2.png)
 
 2.2	不同客户端通信
 
