--- a/docs/_posts/2000-01-01-home.md
+++ b/docs/_posts/2000-01-01-home.md
@@ -8,8 +8,10 @@ color: black
 1. [推荐内容分发*下载* 地址](https://cdn.jsdelivr.net/gh/appemit/appemit/dist/AppEmit.zip)
    [github *下载* 地址](https://raw.githubusercontent.com/appemit/appemit/master/dist/AppEmit.zip)
 2. [AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html)   [Demo](http://www.appemit.com/demo/index.html)
- 
 
+  [Register](http://www.appemit.com/login.html)
+ 
+ 
 #  AppEmit
 
 AppEmit是应用程序（尤其是浏览器）与本地程序间互相通信的易扩展的轻量级中间件。主要采用了HTML5国际标准的Web Socket进行通话，默认为异步， JSON格式传递参数。
@@ -74,9 +76,9 @@ ws.onclose = function (evt) {};
 
 1.3.2	主要步骤，连接授权，发送命令
 
-1.	网页注册后获得设置cid，clientKey，获得连接授权。或者使用临时账户cid=10000-0测试。
+1.	网页注册后获得设置cid，clientKey，获得连接授权。或者使用临时账户cid=00000-1测试。
 2.	连接Appemit服务
-     `initAppEmit("ws://localhost:80/appemit?cid=10000-0&sid=1&flag=1")`
+     `initAppEmit("ws://localhost:80/appemit?cid=00000-1&sid=1&flag=1")`
 3.	设置clientKey授权，(clientKey为私有，发布后需要保密混淆加密js)初始化数据以及授权等
 
 ```
