--- a/docs/_posts/2000-01-07-download.md
+++ b/docs/_posts/2000-01-07-download.md
@@ -13,14 +13,17 @@ easy,samll!
    [github *下载*地址](https://raw.githubusercontent.com/appemit/appemit/master/dist/AppEmit.zip)
 2. [AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html)   [Demo](http://www.appemit.com/demo/index.html)
 
-### Github 的目录说明
+ 
+- **Github 的目录说明**
 
-```
 ├ dist           下载此文件夹的zip压缩包即可。已经包含了NPSWF和帮助文档demo
+ 
 ├ docs         略过
+ 
 ├ plugins      含有更多的插件，使用时自动安装，如果局域网使用请自行下载。
+ 
 ├ README.md 
+ 
 └ README_zh.md
-```
 
  
