--- a/docs/_posts/2000-01-01-home.md
+++ b/docs/_posts/2000-01-01-home.md
@@ -4,7 +4,7 @@ bg: white
 color: black
  
 ---
-
+    [English](https://github.com/appemit/appemit/blob/master/README.md)
 1. [推荐内容分发*下载* 地址](https://cdn.jsdelivr.net/gh/appemit/appemit/dist/AppEmit.zip)
    [github *下载* 地址](https://raw.githubusercontent.com/appemit/appemit/master/dist/AppEmit.zip)
 2. [AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html)   [Office Demo](http://www.appemit.com/demo/office.html?file=1)   [Demo](http://www.appemit.com/demo/index.html) 
@@ -16,11 +16,12 @@ color: black
 AppEmit是应用程序（尤其是浏览器）与本地程序间互相通信的易扩展的轻量级中间件。主要采用了HTML5国际标准的Web Socket进行通话，默认为异步， JSON格式传递参数。
 
 - **主要实现功能：**	
- - 在浏览器播放含有flash的网页或Flash文件，包括swf交互动画、flv影视等
- - 在浏览器打开、操作本地文件，比如办公软件
+ - 在所有浏览器播放含有flash的网页或Flash文件，包括swf交互动画、flv影视等
+ - 在所有浏览器打开、操作本地文件，比如阅读PDF；创建、阅读、编辑Office文件，且支持JavaScript代码操作
  - 开发本地硬件DLL驱动模块的封装插件，实现在网页中操作控制本地的读卡器、打印机、扫描仪、高拍仪、U盾等各种硬件设备
  - 各个应用程序之间通信，比如聊天
- - 在Chrome里嵌入IE内核网页，可以不修改原有的ActiveX读取html，同时支持开源内核wke和blink
+ - 	在Chrome里嵌入IE内核网页，保护源码，可以不修改原有的ActiveX读取html，同时支持开源内核wke和blink
+
 
 
 - **解决问题**
