--- a/docs/_posts/2000-01-01-home.md
+++ b/docs/_posts/2000-01-01-home.md
@@ -6,7 +6,9 @@ color: black
 ---
 
 [English](https://github.com/appemit/appemit/blob/master/README.md)
-	
+
+最新版本 AppEmit  v0.9.1	
+
 1. [推荐内容分发*下载* 地址](https://cdn.jsdelivr.net/gh/appemit/appemit/dist/AppEmit.zip)
    [github *下载* 地址](https://raw.githubusercontent.com/appemit/appemit/master/dist/AppEmit.zip)
 2. [AppEmbed Demo](http://www.appemit.com/demo/AppEmbed.html)   [Office Demo](http://www.appemit.com/demo/office.html?file=1)   [Demo](http://www.appemit.com/demo/index.html) 
