--- a/docs/_posts/2000-01-01-home.md
+++ b/docs/_posts/2000-01-01-home.md
@@ -4,10 +4,8 @@ bg: white
 color: black
  
 ---
-
-[English](https://github.com/appemit/appemit/blob/master/README.md)
-
-最新版本 AppEmit  v0.9.2	
+ 
+最新版本 AppEmit  v0.9.2	 [English](https://github.com/appemit/appemit/blob/master/README.md)
 
 1. [推荐内容分发*下载* 地址(更新有滞后)](https://cdn.jsdelivr.net/gh/appemit/appemit@master/dist/AppEmit.zip)
    [github *下载* 地址](https://raw.githubusercontent.com/appemit/appemit/master/dist/AppEmit.zip)
